--- a/Project.toml
+++ b/Project.toml
@@ -3,7 +3,15 @@ uuid = "69a0a054-a29c-4d77-8818-cd7ec12cfcdc"
 authors = ["Abdelrahman Fathy Abdelrahman"]
 version = "1.0.0-DEV"
 
+[deps]
+AlgebraicMultigrid = "2169fc97-5a83-5252-b627-83903c6c433c"
+Ferrite = "c061ca5d-56c9-439f-9c0e-210fe06d3992"
+SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
+
 [compat]
+AlgebraicMultigrid = "1.0.0"
+Ferrite = "1.1.0"
+SparseArrays = "1.11.0"
 julia = "1.6.7"
 
 [extras]
