--- a/Project.toml
+++ b/Project.toml
@@ -6,11 +6,13 @@ version = "1.0.0-DEV"
 [deps]
 AlgebraicMultigrid = "2169fc97-5a83-5252-b627-83903c6c433c"
 Ferrite = "c061ca5d-56c9-439f-9c0e-210fe06d3992"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 
 [compat]
 AlgebraicMultigrid = "1.0.0"
 Ferrite = "1.1.0"
+LinearAlgebra = "1.11.0"
 SparseArrays = "1.11.0"
 julia = "1.6.7"
 
