--- a/.github/workflows/Documentation.yml
+++ b/.github/workflows/Documentation.yml
@@ -2,7 +2,7 @@ name: Documentation
 on:
   pull_request:
   push:
-    branches: ['master']
+    branches: ['main']
     tags: ['*']
 jobs:
   docs:
