--- a/.github/workflows/Documentation.yml
+++ b/.github/workflows/Documentation.yml
@@ -15,8 +15,8 @@ jobs:
         with:
           version: '1.11'
       - uses: julia-actions/cache@v2
-    #   - name: Install dependencies
-    #     run: julia --project=docs -e 'using Pkg; Pkg.instantiate(); Pkg.precompile()'
+      - name: Install dependencies
+        run: julia --project=docs -e 'using Pkg; Pkg.instantiate(); Pkg.precompile()'
       - name: Build and deploy
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
