--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -2,5 +2,6 @@
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 DocumenterCitations = "daee34ce-89f3-4625-b898-19384cb65244"
 FerriteMultigrid = "69a0a054-a29c-4d77-8818-cd7ec12cfcdc"
+Literate = "98b081ad-f1c9-55d3-8b20-4c87d4299306"
 LiveServer = "16fef848-5104-11e9-1b77-fb7a48bbb589"
 TimerOutputs = "a759f4b9-e2f1-59dc-863e-4aeb61b1ea8f"
