--- a/Project.toml
+++ b/Project.toml
@@ -7,6 +7,7 @@ version = "1.0.0-DEV"
 AlgebraicMultigrid = "2169fc97-5a83-5252-b627-83903c6c433c"
 CommonSolve = "38540f10-b2f7-11e9-35d8-d573e4eb0ff2"
 Ferrite = "c061ca5d-56c9-439f-9c0e-210fe06d3992"
+FerriteGmsh = "4f95f4f8-b27c-4ae5-9a39-ea55e634e36b"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 LinearSolve = "7ed4a6bd-45f5-4d41-b270-4a48e9bafcae"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
@@ -16,6 +17,7 @@ SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 AlgebraicMultigrid = "1.1.0"
 CommonSolve = "0.2.4"
 Ferrite = "1"
+FerriteGmsh = "1.2.1"
 LinearAlgebra = "1"
 LinearSolve = "3.17.0"
 Reexport = "1"
